# gidy-client

./: .gitignore  Cargo.toml  gidy-client.toml  maintain.md  myai2.bat  plan.md  remote-client.toml  test-client.toml  方案.md
.github/workflows/: android.yml  build.yml  ci.yml  release.yml
.github/workflows/scripts/: push_apk_diagnostic.py  push_build_failure.py  push_release.py
docs/: gidy-client-ui (1).html
gidy-android/: .gitignore  README.md  settings.gradle.kts
gidy-android/app/: build.gradle.kts  proguard-rules.pro
gidy-android/app/src/main/: AndroidManifest.xml
gidy-android/app/src/main/kotlin/com/gidy/client/: GidyApp.kt  MainActivity.kt
gidy-android/app/src/main/kotlin/com/gidy/client/data/: Config.kt  ConfigDataStore.kt  MockStats.kt
gidy-android/app/src/main/kotlin/com/gidy/client/nav/: NavGraph.kt
gidy-android/app/src/main/kotlin/com/gidy/client/ui/components/: AppleCard.kt  AppleSwitch.kt  KpiCard.kt  SectionHeader.kt  SegmentedToggle.kt  SpeedChart.kt  Speedometer.kt  StatusBadge.kt
gidy-android/app/src/main/kotlin/com/gidy/client/ui/screens/: AboutScreen.kt  DashboardScreen.kt  SystemConfigScreen.kt  TrafficMonitorScreen.kt  UserSettingsScreen.kt
gidy-android/app/src/main/kotlin/com/gidy/client/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
gidy-android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
gidy-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
gidy-android/app/src/main/res/values-night/: themes.xml
gidy-android/app/src/main/res/values-zh/: strings.xml
gidy-android/gradle/: libs.versions.toml
gidy-client-cli/: Cargo.toml
gidy-client-cli/src/: main.rs  win_proxy.rs
gidy-client-core/: Cargo.toml
gidy-client-core/src/: client.rs  config.rs  lib.rs  proxy.rs  stats.rs
gidy-client-gui/: Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
gidy-client-gui/src/: App.tsx  about.rs  api.ts  app.rs  config.rs  dashboard.rs  i18n.rs  index.css  lang.rs  main.rs  main.tsx  proxy.rs  proxy_state.rs  sidebar.rs  speed_chart.rs  system_config.rs  theme.rs  traffic_monitor.rs  tray.rs  user_settings.rs  win_proxy.rs
gidy-client-gui/src-tauri/: Cargo.toml  tauri.conf.json
gidy-client-gui/src-tauri/capabilities/: main.json
gidy-client-gui/src-tauri/icons/: icon.icns
gidy-client-gui/src-tauri/src/: commands.rs  lib.rs  main.rs  system_proxy.rs
gidy-client-gui/src/components/: Sidebar.tsx  SpeedChart.tsx  Speedometer.tsx
gidy-client-gui/src/i18n/: en.ts  index.ts  zh.ts
gidy-client-gui/src/pages/: About.tsx  Dashboard.tsx  LogViewer.tsx  ProxyConfig.tsx  SystemConfig.tsx  TrafficMonitor.tsx  UserSettings.tsx
