[package]
name = "gidy-client-core"
version.workspace = true
edition.workspace = true
description = "gidy client core library - SOCKS5 proxy + QUIC transport"

[dependencies]
gidy-core = { git = "https://github.com/yokeay/gidy-core.git" }
tokio = { version = "1", features = ["full"] }
quinn = "0.11"
bytes = "1"
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1"
tracing = "0.1"
parking_lot = "0.12"
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
rcgen = "0.13"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
