[package]
name = "gidy-client-core"
version.workspace = true
edition.workspace = true
description = "gidy client core library - SOCKS5 proxy + HTTP/3 CONNECT transport"

[dependencies]
gidy-core = { path = "../../gidy-core" }
quinn = "0.11"
h3 = "0.0.8"
h3-quinn = "0.0.10"
tokio = { version = "1", features = ["full"] }
bytes = "1"
http = "1"
rustls = { version = "0.23", features = ["ring"] }
tracing = "0.1"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"
blake3 = "1"
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client", "client-legacy"] }
tokio-rustls = "0.26"
http-body-util = "0.1"
base64 = "0.22"
h2 = "0.4"
