[package]
name = "gidy-client-gui"
version = "0.2.3"
edition = "2021"

[dependencies]
eframe = "0.31"
egui = "0.31"
egui_plot = "0.31"
gidy-client-core = { path = "../gidy-client-core" }
gidy-core = { path = "../../gidy-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hex = "0.4"
chrono = "0.4"
