[package]
name = "gidy-client-gui"
version.workspace = true
edition.workspace = true
description = "gidy client GUI - Tauri desktop app"

[lib]
name = "gidy_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
gidy-client-core = { path = "../../gidy-client-core" }
gidy-core = { path = "../../../gidy-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
parking_lot = "0.12"
