[package]
name = "gidy-client-gui"
version.workspace = true
edition.workspace = true
description = "gidy client GUI - Tauri desktop app"

[lib]
name = "gidy_client_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
gidy-client-core = { path = "../../gidy-client-core" }
gidy-core = { path = "../../../gidy-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
parking_lot = "0.12"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
tokio-rustls = { version = "0.26" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-webpki-roots", "json", "socks"] }
base64 = "0.22"
url = "2"
[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
